Add header icon, footer, form submit button

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
   </head>
   <body>
     <header>
-      <h1>Weather</h1>
+      <h1 class="fas fa-cloud-sun">Weather</h1>
     </header>
 
     <form>
-      <label for="city">Enter a City</label>
-      <input type="text" name="city" id="city" />
-      <input type="submit" name="city" id="submit" />
+      <input type="text" name="city" id="city" placeholder="Enter a city" />
+      <input type="submit" name="city" id="submit" value="Search" hidden />
     </form>
 
     <main></main>
+    <footer></footer>
   </body>
 </html>
